
       % genltl --lily-patterns | ltlsynt -q

  - autfilt learned --restrict-dead-end-edges, to restricts labels of
    edges leading to dead-ends.  See the description of
    restrict_dead_end_edges_here() below.

  - autfilt learned --track-formula=F to label states with formulas
    derived from F.  (This is more precise on deterministic automata.)

  - ltlfilt learned --pi1, --sigma1, --delta1, --pi2, --sigma2, and
    --delta2 to filter according to classes Π₁,Σ₁,Δ₁,Π₂,Σ₂, and Δ₂.

  - ltlfilt learned --to-delta2 to transform an LTL formula into Δ₂.

  Library:

   - restrict_dead_end_edges_here() can reduce non-determinism (but
     not remove it) by restricting the label L of some edge (S)-L->(D)
     going to a state D that does not have other successor than
     itself.  The conditions are detailled in the documentation of
     this function.

   - spot::postprocessor will now call restrict_dead_end_edges_here()
     in its highest setting.  This can be fine-tuned with the "rde"
     extra option, see the spot-x (7) man page for detail.

   - The formula class now keeps track of membership to the Δ₁, Σ₂,
     Π₂, and Δ₂ syntactic class.  This can be tested with
     formula::is_delta1(), formula::is_sigma2(), formula::is_pi2(),
     formula::is_delta2().  See doc/tl/tl.pdf from more discussion.

   - spot::to_delta2() implements Δ₂-normalization for LTL formulas,
     following "Efficient Normalization of Linear Temporal Logic" by
     Esparza et al. (J. ACM, 2024).

   - Trivial rewritings (those performed everytime at construction)
     were missing the rule "[*0]|f ≡ f" when f already accepts the
     empty word.  (Issue #545.)

   - spot::match_states(A, B) is a new function that returns a vector
     V such that V[x] contains all states y such that state (x, y) can
     reach an accepting cycle in product(A, B).  In particular, if A
     and B accept the same language, any word accepted by A from state