@@ -1085,6 +1085,20 @@
   doi		= {10.1007/978-3-642-16612-9_33}
 }
 
+@Article{	  tarjan.84.sicomp,
+  author	= {Robert E. Tarjan and Mihalis Yannakakis},
+  title		= {Simple linear-time algorithms to test chordality of
+		  graphs, test acyclicity of hypergraphs, and selectively
+		  reduce acyclic hypergraphs},
+  journal	= {SIAM Journal on Computing},
+  year		= {1984},
+  volume	= {13},
+  number	= {3},
+  pages		= {566--579},
+  month		= aug,
+  doi		= {10.1137/0213035}
+}
+
 @TechReport{	  tauriainen.00.tr,
   author	= {Heikki Tauriainen},
   title		= {Automated Testing of {B\"u}chi Automata Translators for
